geekle: Results of large data hunt

--- a/geekleml2021/Untitled.ipynb
+++ b/geekleml2021/Untitled.ipynb
@@ -103,6 +103,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def autolabel():\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 130,
    "metadata": {},
    "outputs": [
