distance-detection: Add some notes

--- a/handson/distance-detection/TwoEvents.ipynb
+++ b/handson/distance-detection/TwoEvents.ipynb
@@ -1124,6 +1124,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 224,
+   "id": "977a2ed9-c3b7-4561-b1b2-bfe0a94dfe70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4142135623730951"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numpy.sqrt(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "id": "bf220c69-cef5-48ac-85f0-04ff866fb5fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.9880999999999998"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1.41**2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 166,
    "id": "993392b0-106d-4cdb-9246-f5c4438016e9",
    "metadata": {},
