quantized-mfcc: Show effect of per-coeffcient normalization

--- a/handson/quantized-mfcc/MFCC-Spectrogram-Shifts.ipynb
+++ b/handson/quantized-mfcc/MFCC-Spectrogram-Shifts.ipynb
@@ -150,9 +150,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "67e15ca2-238d-4401-8d36-1f88bfaa19d9",
+   "metadata": {},
+   "source": [
+    "## MFCC normalization\n",
+    "\n",
+    "It is only the first MFCC / DCT coefficient that changes during shifts of the spectrogram.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f4270dd3-a962-4e03-b306-2b9555da8629",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def plot_mfcc_distributions(m):\n",
+    "\n",
+    "    n_coeffs = m.shape[0]\n",
+    "    fig, axs = plt.subplots(n_coeffs, figsize=(25,6), sharex=True, sharey=True)\n",
+    "    for coeff_no in range(n_coeffs):\n",
+    "\n",
+    "        ax = axs[coeff_no]\n",
+    "        p = seaborn.color_palette(\"husl\", m.shape[0])\n",
+    "        color = p[coeff_no]\n",
+    "        seaborn.histplot(m[coeff_no], color=color, label=f'MFCC{coeff_no}', alpha=0.5,ax=ax, bins=20)\n",
+    "\n",
+    "        #ax.set(xticklabels=[])\n",
+    "        ax.set(yticklabels=[])\n",
+    "        ax.set(ylabel=None)\n",
+    "        ax.tick_params(right=False)\n",
+    "        ax.get_yaxis().set_visible(False)\n",
+    "        seaborn.despine(ax=ax, left=True)\n",
+    "\n",
+    "        ax.axvline(0.0, ls='--', alpha=0.5, color='black')\n",
+    "        \n",
+    "        ax.legend(loc='upper right')\n",
+    "\n",
+    "        if coeff_no != (n_coeffs-1):\n",
+    "            ax.get_xaxis().set_visible(False)\n",
+    "            seaborn.despine(ax=ax, bottom=True, left=True)\n",
+    "        \n",
+    "    return fig\n",
+    "\n",
+    "def normalize(m):\n",
+    "    means = numpy.mean(m, axis=1, keepdims=True)\n",
+    "    #assert means.shape == 13, means.shape\n",
+    "    m -= means\n",
+    "    stds = numpy.std(m, axis=1, keepdims=True)\n",
+    "    m /= stds\n",
+    "    return m\n",
+    "\n",
+    "n_mfcc = 13\n",
+    "\n",
+    "m = librosa.feature.mfcc(S=S + 0, n_mfcc=n_mfcc)\n",
+    "fig = plot_mfcc_distributions(m)\n",
+    "fig.axes[0].set_xlim(-600, 600)\n",
+    "fig.suptitle(\"Original\")\n",
+    "\n",
+    "m = librosa.feature.mfcc(S=S - numpy.mean(S), n_mfcc=n_mfcc)\n",
+    "fig = plot_mfcc_distributions(m)\n",
+    "fig.axes[0].set_xlim(-600, 600)\n",
+    "fig.suptitle(\"Spectrogram centering\")\n",
+    "\n",
+    "m = librosa.feature.mfcc(S=S + 0, n_mfcc=n_mfcc)\n",
+    "m = normalize(m)\n",
+    "fig = plot_mfcc_distributions(m)\n",
+    "fig.axes[0].set_xlim(-6, 6)\n",
+    "fig.suptitle(\"Per-coefficient standardization\")\n",
+    "    \n",
+    "None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a108ce9-a6cb-4720-a322-c30d8c0f904d",
    "metadata": {},
    "outputs": [],
    "source": []
