advertisement-detection: Make runnable

--- a/handson/advertisement-detection/AudioMatching.ipynb
+++ b/handson/advertisement-detection/AudioMatching.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "5c84a555-25ae-49b9-a8d2-cea652f0f30a",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "d98b32ff-4925-4d3a-8baa-6e3d4df38015",
    "metadata": {},
    "outputs": [],
@@ -100,10 +100,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "cac0d0d2-fcd7-4b50-9c8d-020f402260eb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_157504/3799590177.py:142: UserWarning: PySoundFile failed. Trying audioread instead.\n",
+      "  short, sr = librosa.load('house_ad.m4a', sr=samplerate)\n",
+      "/home/jon/.local/lib/python3.10/site-packages/librosa/core/audio.py:184: FutureWarning: librosa.core.audio.__audioread_load\n",
+      "\tDeprecated as of librosa version 0.10.0.\n",
+      "\tIt will be removed in librosa version 1.0.\n",
+      "  y, sr_native = __audioread_load(path, offset, duration, dtype)\n",
+      "/tmp/ipykernel_157504/3799590177.py:143: UserWarning: PySoundFile failed. Trying audioread instead.\n",
+      "  long, sr = librosa.load('long_audio.m4a', sr=samplerate)\n",
+      "/home/jon/.local/lib/python3.10/site-packages/librosa/core/audio.py:184: FutureWarning: librosa.core.audio.__audioread_load\n",
+      "\tDeprecated as of librosa version 0.10.0.\n",
+      "\tIt will be removed in librosa version 1.0.\n",
+      "  y, sr_native = __audioread_load(path, offset, duration, dtype)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -267,8 +285,8 @@
     "threshold = 0.02\n",
     "max_matches = 3 \n",
     "\n",
-    "#short, sr = librosa.load('house_ad.m4a', sr=samplerate)\n",
-    "#long, sr = librosa.load('long_audio.m4a', sr=samplerate)\n",
+    "short, sr = librosa.load('house_ad.m4a', sr=samplerate)\n",
+    "long, sr = librosa.load('long_audio.m4a', sr=samplerate)\n",
     "\n",
     "scores, matches = find_audio(long, short, max_matches=max_matches, score_threshold=threshold)\n",
     "\n",
