audio-embedding: Some notes

--- a/handson/audio-embedding/Segmentation.ipynb
+++ b/handson/audio-embedding/Segmentation.ipynb
@@ -595,405 +595,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "6914bcd9-aec4-43ef-bbfa-f5c1913e7547",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>e0</th>\n",
-       "      <th>e1</th>\n",
-       "      <th>e2</th>\n",
-       "      <th>e3</th>\n",
-       "      <th>e4</th>\n",
-       "      <th>e5</th>\n",
-       "      <th>e6</th>\n",
-       "      <th>e7</th>\n",
-       "      <th>e8</th>\n",
-       "      <th>e9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>e1015</th>\n",
-       "      <th>e1016</th>\n",
-       "      <th>e1017</th>\n",
-       "      <th>e1018</th>\n",
-       "      <th>e1019</th>\n",
-       "      <th>e1020</th>\n",
-       "      <th>e1021</th>\n",
-       "      <th>e1022</th>\n",
-       "      <th>e1023</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>169.92</th>\n",
-       "      <td>0.176054</td>\n",
-       "      <td>0.171117</td>\n",
-       "      <td>0.658909</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.058137</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.040356</td>\n",
-       "      <td>0.080256</td>\n",
-       "      <td>0.128111</td>\n",
-       "      <td>0.318552</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.002660</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.026043</td>\n",
-       "      <td>0.007927</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Morten</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170.40</th>\n",
-       "      <td>0.356680</td>\n",
-       "      <td>0.226783</td>\n",
-       "      <td>0.569257</td>\n",
-       "      <td>0.017390</td>\n",
-       "      <td>0.098932</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.052414</td>\n",
-       "      <td>0.057486</td>\n",
-       "      <td>0.155392</td>\n",
-       "      <td>0.321516</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.070620</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.249213</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.339547</td>\n",
-       "      <td>0.010238</td>\n",
-       "      <td>0.152880</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Morten</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170.88</th>\n",
-       "      <td>0.413041</td>\n",
-       "      <td>0.001732</td>\n",
-       "      <td>0.563033</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.044488</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.077984</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.203575</td>\n",
-       "      <td>0.515575</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.434022</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.070310</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.406849</td>\n",
-       "      <td>0.065501</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Morten</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171.36</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.003521</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.176192</td>\n",
-       "      <td>0.702394</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.329284</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.003756</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.211879</td>\n",
-       "      <td>0.098989</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Morten</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171.84</th>\n",
-       "      <td>0.381880</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.094256</td>\n",
-       "      <td>0.078017</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.093004</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.063076</td>\n",
-       "      <td>0.497555</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.360877</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.201218</td>\n",
-       "      <td>0.014116</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Morten</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3508.80</th>\n",
-       "      <td>0.410372</td>\n",
-       "      <td>0.392584</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.005668</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.001985</td>\n",
-       "      <td>0.031118</td>\n",
-       "      <td>0.006315</td>\n",
-       "      <td>0.073508</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.016347</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Morten</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3509.28</th>\n",
-       "      <td>0.155249</td>\n",
-       "      <td>0.049735</td>\n",
-       "      <td>0.494288</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.066838</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.173394</td>\n",
-       "      <td>0.004041</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.793183</td>\n",
-       "      <td>0.235333</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Morten</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3509.76</th>\n",
-       "      <td>0.123216</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.389150</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.118907</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.084387</td>\n",
-       "      <td>0.056254</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.008137</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.401145</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Morten</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3510.24</th>\n",
-       "      <td>2.650211</td>\n",
-       "      <td>0.124698</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.279484</td>\n",
-       "      <td>2.574828</td>\n",
-       "      <td>1.063962</td>\n",
-       "      <td>0.104891</td>\n",
-       "      <td>2.197894</td>\n",
-       "      <td>2.860548</td>\n",
-       "      <td>1.122234</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.207448</td>\n",
-       "      <td>1.685977</td>\n",
-       "      <td>0.153659</td>\n",
-       "      <td>2.355837</td>\n",
-       "      <td>0.891084</td>\n",
-       "      <td>1.561489</td>\n",
-       "      <td>0.019100</td>\n",
-       "      <td>1.569903</td>\n",
-       "      <td>1.420718</td>\n",
-       "      <td>Morten</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3510.72</th>\n",
-       "      <td>2.207157</td>\n",
-       "      <td>0.020748</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.095968</td>\n",
-       "      <td>2.913750</td>\n",
-       "      <td>1.691960</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.948039</td>\n",
-       "      <td>2.663368</td>\n",
-       "      <td>0.616436</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.494025</td>\n",
-       "      <td>2.757870</td>\n",
-       "      <td>0.170723</td>\n",
-       "      <td>3.733313</td>\n",
-       "      <td>1.270249</td>\n",
-       "      <td>1.670782</td>\n",
-       "      <td>0.465691</td>\n",
-       "      <td>1.278958</td>\n",
-       "      <td>2.342933</td>\n",
-       "      <td>Morten</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6664 rows × 1025 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               e0        e1        e2        e3        e4        e5        e6  \\\n",
-       "time                                                                            \n",
-       "169.92   0.176054  0.171117  0.658909  0.000000  0.058137  0.000000  0.040356   \n",
-       "170.40   0.356680  0.226783  0.569257  0.017390  0.098932  0.000000  0.052414   \n",
-       "170.88   0.413041  0.001732  0.563033  0.000000  0.044488  0.000000  0.077984   \n",
-       "171.36   0.000000  0.003521  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "171.84   0.381880  0.000000  0.094256  0.078017  0.000000  0.000000  0.093004   \n",
-       "...           ...       ...       ...       ...       ...       ...       ...   \n",
-       "3508.80  0.410372  0.392584  0.000000  0.000000  0.005668  0.000000  0.001985   \n",
-       "3509.28  0.155249  0.049735  0.494288  0.000000  0.066838  0.000000  0.000000   \n",
-       "3509.76  0.123216  0.000000  0.389150  0.000000  0.118907  0.000000  0.000000   \n",
-       "3510.24  2.650211  0.124698  0.000000  0.279484  2.574828  1.063962  0.104891   \n",
-       "3510.72  2.207157  0.020748  0.000000  0.095968  2.913750  1.691960  0.000000   \n",
-       "\n",
-       "               e7        e8        e9  ...     e1015     e1016     e1017  \\\n",
-       "time                                   ...                                 \n",
-       "169.92   0.080256  0.128111  0.318552  ...  0.002660  0.000000  0.000000   \n",
-       "170.40   0.057486  0.155392  0.321516  ...  0.070620  0.000000  0.249213   \n",
-       "170.88   0.000000  0.203575  0.515575  ...  0.434022  0.000000  0.070310   \n",
-       "171.36   0.000000  0.176192  0.702394  ...  0.329284  0.000000  0.003756   \n",
-       "171.84   0.000000  0.063076  0.497555  ...  0.360877  0.000000  0.000000   \n",
-       "...           ...       ...       ...  ...       ...       ...       ...   \n",
-       "3508.80  0.031118  0.006315  0.073508  ...  0.000000  0.000000  0.000000   \n",
-       "3509.28  0.000000  0.173394  0.004041  ...  0.000000  0.000000  0.000000   \n",
-       "3509.76  0.000000  0.084387  0.056254  ...  0.008137  0.000000  0.000000   \n",
-       "3510.24  2.197894  2.860548  1.122234  ...  2.207448  1.685977  0.153659   \n",
-       "3510.72  2.948039  2.663368  0.616436  ...  2.494025  2.757870  0.170723   \n",
-       "\n",
-       "            e1018     e1019     e1020     e1021     e1022     e1023   label  \n",
-       "time                                                                         \n",
-       "169.92   0.000000  0.000000  0.026043  0.007927  0.000000  0.000000  Morten  \n",
-       "170.40   0.000000  0.000000  0.339547  0.010238  0.152880  0.000000  Morten  \n",
-       "170.88   0.000000  0.000000  0.406849  0.065501  0.000000  0.000000  Morten  \n",
-       "171.36   0.000000  0.000000  0.211879  0.098989  0.000000  0.000000  Morten  \n",
-       "171.84   0.000000  0.000000  0.201218  0.014116  0.000000  0.000000  Morten  \n",
-       "...           ...       ...       ...       ...       ...       ...     ...  \n",
-       "3508.80  0.000000  0.000000  0.016347  0.000000  0.000000  0.000000  Morten  \n",
-       "3509.28  0.000000  0.000000  0.793183  0.235333  0.000000  0.000000  Morten  \n",
-       "3509.76  0.000000  0.000000  0.401145  0.000000  0.000000  0.000000  Morten  \n",
-       "3510.24  2.355837  0.891084  1.561489  0.019100  1.569903  1.420718  Morten  \n",
-       "3510.72  3.733313  1.270249  1.670782  0.465691  1.278958  2.342933  Morten  \n",
-       "\n",
-       "[6664 rows x 1025 columns]"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 120,
    "id": "5cff5f6a-fce3-4135-91d0-c3067bba74ca",
    "metadata": {},
@@ -1427,6 +1028,7 @@
    "source": [
     "def resample(df, freq='3s', agg='median'):\n",
     "\n",
+    "    # FIXME: make output be same resolution as input\n",
     "    df = df.copy()\n",
     "    df.index = pandas.to_timedelta(df.index, unit='s')\n",
     "\n",
@@ -1458,65 +1060,25 @@
     }
    ],
    "source": [
+    "# FIXME: make this into a function\n",
+    "class_map_idx = dict(zip(range(0, 4), estimator.classes_))\n",
+    "class_map_idx\n",
+    "\n",
     "llp = ll.values.argmax(axis=1)\n",
     "\n",
-    "ll.shape, llp.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
-   "id": "82fa1be5-dfbd-4e9b-820b-289b319ba949",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 'Audun', 1: 'Jon', 2: 'Morten', 3: 'Oystein'}"
-      ]
-     },
-     "execution_count": 179,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class_map_idx = dict(zip(range(0, 4), estimator.classes_))\n",
-    "class_map_idx\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "id": "af0078c7-d744-4244-b0a7-e261d6f1feb7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "time\n",
-       "1900.32    Oystein\n",
-       "1903.32        Jon\n",
-       "1906.32      Audun\n",
-       "1909.32     Morten\n",
-       "1912.32     Morten\n",
-       "            ...   \n",
-       "3496.32     Morten\n",
-       "3499.32     Morten\n",
-       "3502.32     Morten\n",
-       "3505.32     Morten\n",
-       "3508.32      Audun\n",
-       "Length: 537, dtype: object"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "smooth = pandas.Series(llp, index=ll.index).replace(class_map_idx)\n",
     "smooth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3df783f7-fbaa-41bb-8026-3444d61ed581",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: also add/try HMM-GMM smoothing\n",
+    "\n"
    ]
   },
   {
@@ -1577,7 +1139,10 @@
    "id": "6fdd415d-5bde-46c2-b5be-9b73b2ab5ace",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# TODO: try to learn a simple RNN\n"
+   ]
   }
  ],
  "metadata": {
