audio-embedding: Sketch for RNN

--- a/handson/audio-embedding/Segmentation.ipynb
+++ b/handson/audio-embedding/Segmentation.ipynb
@@ -1135,14 +1135,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "id": "6fdd415d-5bde-46c2-b5be-9b73b2ab5ace",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-03 01:19:04.631666: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_2_grad/concat/split_2/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_2_grad/concat/split_2/split_dim}}]]\n",
+      "2023-06-03 01:19:04.632422: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_grad/concat/split/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_grad/concat/split/split_dim}}]]\n",
+      "2023-06-03 01:19:04.633249: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_1_grad/concat/split_1/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_1_grad/concat/split_1/split_dim}}]]\n",
+      "2023-06-03 01:19:04.709480: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/ReverseV2_grad/ReverseV2/ReverseV2/axis' with dtype int32 and shape [1]\n",
+      "\t [[{{node gradients/ReverseV2_grad/ReverseV2/ReverseV2/axis}}]]\n",
+      "2023-06-03 01:19:04.731945: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_2_grad/concat/split_2/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_2_grad/concat/split_2/split_dim}}]]\n",
+      "2023-06-03 01:19:04.732779: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_grad/concat/split/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_grad/concat/split/split_dim}}]]\n",
+      "2023-06-03 01:19:04.733433: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_1_grad/concat/split_1/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_1_grad/concat/split_1/split_dim}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_7\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " time_distributed_15 (TimeDi  (None, 5, 16)            2064      \n",
+      " stributed)                                                      \n",
+      "                                                                 \n",
+      " bidirectional_14 (Bidirecti  (None, 5, 32)            3264      \n",
+      " onal)                                                           \n",
+      "                                                                 \n",
+      " bidirectional_15 (Bidirecti  (None, 5, 32)            4800      \n",
+      " onal)                                                           \n",
+      "                                                                 \n",
+      " time_distributed_16 (TimeDi  (None, 5, 4)             132       \n",
+      " stributed)                                                      \n",
+      "                                                                 \n",
+      " activation_7 (Activation)   (None, 5, 4)              0         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 10,260\n",
+      "Trainable params: 10,260\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-03 01:19:04.837016: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_2_grad/concat/split_2/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_2_grad/concat/split_2/split_dim}}]]\n",
+      "2023-06-03 01:19:04.837929: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_grad/concat/split/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_grad/concat/split/split_dim}}]]\n",
+      "2023-06-03 01:19:04.838611: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_1_grad/concat/split_1/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_1_grad/concat/split_1/split_dim}}]]\n",
+      "2023-06-03 01:19:04.916372: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/ReverseV2_grad/ReverseV2/ReverseV2/axis' with dtype int32 and shape [1]\n",
+      "\t [[{{node gradients/ReverseV2_grad/ReverseV2/ReverseV2/axis}}]]\n",
+      "2023-06-03 01:19:04.937318: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_2_grad/concat/split_2/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_2_grad/concat/split_2/split_dim}}]]\n",
+      "2023-06-03 01:19:04.938113: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_grad/concat/split/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_grad/concat/split/split_dim}}]]\n",
+      "2023-06-03 01:19:04.938935: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_1_grad/concat/split_1/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_1_grad/concat/split_1/split_dim}}]]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# TODO: try to learn a simple RNN\n"
+    "# TODO: try to learn a simple RNN\n",
+    "\n",
+    "def build_rnn(timesteps, n_classes,\n",
+    "              embedding_size=1024, embedding_reduce=128, rnn=10):\n",
+    "\n",
+    "    from tensorflow.keras import layers as l\n",
+    "    from tensorflow.keras import Sequential\n",
+    "                  \n",
+    "    model = Sequential([\n",
+    "        l.Input(shape=(timesteps, embedding_size)),\n",
+    "        l.TimeDistributed(l.Dense(embedding_reduce)),\n",
+    "        l.Bidirectional(l.GRU(rnn, return_sequences=True)),\n",
+    "        l.Bidirectional(l.GRU(rnn, return_sequences=True)),\n",
+    "        l.TimeDistributed(l.Dense(n_classes)),\n",
+    "        l.Activation('sigmoid'),\n",
+    "    ])\n",
+    "\n",
+    "    model.compile(loss='categorical_crossentropy', optimizer='rmsprop')\n",
+    "\n",
+    "    return model\n",
+    "\n",
+    "m = build_rnn(5, n_classes=4, embedding_size=128, embedding_reduce=16, rnn=16)\n",
+    "m.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ef5a567-5299-4365-be34-37e6b8ac7760",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
