consonant-segmentation: Fix import, tight plot

--- a/handson/consonant-vowel-segmentation/Allosaurus.ipynb
+++ b/handson/consonant-vowel-segmentation/Allosaurus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "b54a6fc4-b506-4a57-900d-bf81e6f86189",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,13 @@
     "from matplotlib import pyplot as plt\n",
     "import librosa.display\n",
     "\n",
-    "import allosaurus\n",
+    "import allosaurus.app\n",
     "import panphon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "2b582e61-543a-42ec-af5b-a55afbe64ec2",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "4   0.75  0.795     w      False    red"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "f721d7f1-379d-4d88-9ad1-1720d1fd1f38",
    "metadata": {},
    "outputs": [
@@ -184,6 +184,7 @@
     "                text_kwargs={}, **kwargs):\n",
     "\n",
     "    import itertools\n",
+    "    import seaborn\n",
     "    palette = itertools.cycle(seaborn.color_palette())\n",
     "    \n",
     "    def valid_time(dt):\n",
@@ -218,7 +219,7 @@
     "librosa.display.specshow(spectrogram.T.values, ax=spec_ax, sr=16000, fmax=4000, hop_length=hop_length, x_axis='time')\n",
     "plot_events(label_ax, phones, color='color', annotate='label')\n",
     "\n",
-    "fig.savefig('output.png')"
+    "fig.savefig('output.png', bbox_inches='tight')"
    ]
   },
   {
